Fix map position on mobile. Also, remove duplicate section (remainings from the large breakpoint).

--- a/app/assets/stylesheets/scss/_base.page.scss
+++ b/app/assets/stylesheets/scss/_base.page.scss
@@ -1,7 +1,7 @@
 // Base heritage
 // ==========================================================================
 
-$content: '{ "particleCount" : 50 }';
+$content: '{ "particleCount" : 50, "mobile_viewport" : true }';
 
 .variables-metadata::before {
   content: $content;
@@ -11,16 +11,6 @@ head { font-family: $content; }
 
 @include media-query(start) {
   $content: '{ "particleCount" : 100, "mobile_viewport" : true }';
-
-  .variables-metadata::before {
-    content: $content;
-  }
-
-  head { font-family: $content; }
-}
-
-@include media-query(small) {
-  $content: '{ "particleCount" : 150, "mobile_viewport" : true }';
 
   .variables-metadata::before {
     content: $content;
